--- a/apps/admin/view/default/system/home.html
+++ b/apps/admin/view/default/system/home.html
@@ -14,7 +14,7 @@
 		{if(![$session.pwsecurity])}
 		<p>
 			<i class="fa fa-info-circle" aria-hidden="true"></i>
-			 您的账号密码太简单，存在安全隐患，请尽快修改密码！<a class="layui-btn  layui-btn-sm" href="{url./admin/Index/ucenter}">立即修改</a>
+			 您的账号密码为初始密码，存在安全隐患，请尽快修改密码！<a class="layui-btn  layui-btn-sm" href="{url./admin/Index/ucenter}">立即修改</a>
 		</p>
 		{/if}
     </blockquote>
@@ -119,7 +119,7 @@
 				  <tbody>
 				  	<tr>
 	                    <th>版权所有</th>
-	                    <td><a href="http://www.hnaoyun.com" target="_blank">湖南翱云网络科技有限公司</a></td>
+	                    <td>湖南翱云网络科技有限公司</td>
 	                </tr>
 	
 	                <tr>
