--- a/apps/admin/view/default/system/ucenter.html
+++ b/apps/admin/view/default/system/ucenter.html
@@ -1,6 +1,18 @@
 {include file='common/head.html'}
 
 <div class="layui-body">
+
+	{if(![$session.pwsecurity])}
+	<blockquote class="layui-elem-quote layui-text-red" id="note">
+		{if(![$session.pwsecurity])}
+		<p>
+			<i class="fa fa-info-circle" aria-hidden="true"></i>
+			 您的账号密码为初始密码，存在安全隐患，必须修改密码才能查看后台主页！
+		</p>
+		{/if}
+    </blockquote>
+    {/if}
+    
 	<div class="layui-tab layui-tab-brief" lay-filter="tab">
 	  <ul class="layui-tab-title">
 	    <li class="layui-this">资料修改</li>
